--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ version = 0.1.0
 packages = find:
 install_requires =
     click
-    requests
+    aiohttp
 python_requires = >=3.11
 
 [options.packages.find]
