--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,9 @@ version = 0.1.0
 [options]
 packages = find:
 install_requires =
-    click
     aiohttp
+    click
+    watchfiles
 python_requires = >=3.11
 
 [options.packages.find]
