--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 dev-server = "devserver.cli:cli"
 
 [tool.ruff]
-target-version = "py311"
+line-length = 100
 
 # https://beta.ruff.rs/docs/rules/
 select = [
